--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app",
-    "serve": "nodemon app"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
