Crear historia clinica

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://sanae_user:MsKqz9Ai7hLxtVdq@cluster0.yiig8cn.mongodb.net/sanaeDB
+SECRETORPRIVATEKEY=Est03sMuPubl1cK3y@913
 
+USER=sanae_user
+PASS=MsKqz9Ai7hLxtVdq
