--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "fs-extra": "^11.1.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.42",
     "mongoose": "^6.8.4",
     "multer": "^1.4.5-lts.1",
+    "slot-calculator": "^2.2.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
